Got initial version to work

--- a/org/runutils/Makefile
+++ b/org/runutils/Makefile
@@ -2,4 +2,5 @@ includes = -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux
 cc = gcc
 
 all : spawnlib.c spawnlib.h
+	$(cc) -O3 -Wall -pedantic -o binrunner binrunner.c
 	$(cc) -g -o libspawnlib.so -shared -Wl,-soname,libspawn.so $(includes) spawnlib.c -static -lc
