--- a/org/runutils/Makefile
+++ b/org/runutils/Makefile
@@ -1,6 +1,9 @@
 includes = -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux
 cc = gcc
 
-all : spawnlib.c spawnlib.h
+all : spawnlib.c spawnlib.h binrunner.c
 	$(cc) -O3 -Wall -pedantic -o binrunner binrunner.c
 	$(cc) -g -o libspawnlib.so -shared -Wl,-soname,libspawn.so $(includes) spawnlib.c -static -lc
+
+install: binrunner
+	sudo mv binrunner /usr/bin
