Fixed bug where end of file was not returning -1 since child fd was not closed.

--- a/net/axiak/runutils/Makefile
+++ b/net/axiak/runutils/Makefile
@@ -1,8 +1,11 @@
 includes = -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux
 cc = gcc
 
-all : spawnlib.c spawnlib.h binrunner javaclasses
-	$(cc) -Wall -g -o libspawnlib.so -shared -Wl,-soname,libspawn.so $(includes) spawnlib.c -static -lc
+all: binrunner javaclasses library
+
+library: jlinuxfork.c jlinuxfork.h
+	$(cc) -Wall -g -o libjlinuxfork.so -shared -Wl,-soname,libspawn.so $(includes) jlinuxfork.c -static -lc
+
 
 binrunner:
 	$(cc) -O3 -Wall -pedantic -o binrunner binrunner.c
@@ -12,4 +15,4 @@ javaclasses:
 
 install: binrunner
 	sudo mv binrunner /usr/bin
-	sudo cp libspawnlib.so /usr/lib/
+	sudo cp libjlinuxfork.so /usr/lib/
