Fixed intellij project layout. Added authors and license file. Fixed the build so that it fails if the C fails to compile. Fixed a insignificant initialization error in the C code.

--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
   </target>
 
   <target name="compile-shared" depends="prepare">
-    <exec dir="${app.path}" executable="/usr/bin/make" />
+    <exec dir="${app.path}" executable="/usr/bin/make" failonerror="true" />
   </target>
 
   <target name="compile" depends="compile-spawn,compile-shared"/>
