Fix Makefile for cross-compilation

--- a/src/c/Makefile
+++ b/src/c/Makefile
@@ -1,18 +1,19 @@
 includes = -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux
-cc = cc
+CC ?= cc
+INSTALL ?= install
 
 all: binrunner library
 
 library: jlinuxfork.c jlinuxfork.h
-	$(cc) -fPIC -Wno-long-long -pedantic -O3 -Wall -g -o libjlinuxfork.so -shared -Wl,-soname,libspawn.so $(includes) jlinuxfork.c -lc
+	$(CC) -fPIC -Wno-long-long -pedantic -O3 -Wall -g -o libjlinuxfork.so -shared -Wl,-soname,libspawn.so $(includes) jlinuxfork.c -lc
 
 clean:
 	rm -fv *.so binrunner
 
 binrunner:
-	$(cc) -O3 -Wall -pedantic -o binrunner binrunner.c
-	chmod -v +x binrunner
-
+	$(CC) -O3 -Wall -pedantic -o binrunner binrunner.c
+	
 install: binrunner libjlinuxfork.so
-	sudo mv binrunner /usr/bin
-	sudo cp libjlinuxfork.so /usr/lib/
+	$(INSTALL) -m 755 binrunner $(DESTDIR)/usr/bin
+	$(INSTALL) -m 644 libjlinuxfork.so $(DESTDIR)/usr/lib/
+	
